# cpp_playground

./: CMakeLists.txt  CodingStyleAndRules.md  Dockerfile  a.out  add_new_app_control.ps1  add_new_driver.ps1  add_new_middleware.ps1  build.sh  test.sh
code/: CMakeLists.txt
code/app/: CMakeLists.txt  main.cpp
code/app/control/: CMakeLists.txt
code/app/control/light_controller/: CMakeLists.txt
code/app/control/light_controller/include/: light_controller.h
code/app/control/light_controller/src/: light_controller.cpp
code/drivers/: CMakeLists.txt
code/drivers/hal_light/include/: hal_light.h
code/middleware/: CMakeLists.txt
code/middleware/actuator/: CMakeLists.txt
code/middleware/actuator/include/: actuator.h
code/middleware/actuators/: CMakeLists.txt
code/middleware/actuators/include/: actuators.h
code/middleware/actuators/src/: actuators.cpp
code/middleware/interfaces/: CMakeLists.txt
code/middleware/light/include/: light.h
code/middleware/light/src/: light.cpp
test/: CMakeLists.txt  test_main.cpp
test/app/control/: test_light_controller.cpp
test/middleware/: test_actuators.cpp
